tests/reference/run-array_bounds_check_05-d584fab.stderr
runtime error: Array shape mismatch in subroutine 'my'. Tried to match size 3 of dimension 1 of argument number 1, but expected size is 5
 --> tests/errors/array_bounds_check_05.f90:7:13
  |
7 |     call my(x, 5)
  |             ^
  |
7 |     call my(x, 5)
  |             ~ Parameter is size 5, argument is size 3
